# pygraft-gen

./: .codespellrc  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  ruff.toml
.github/workflows/: docs.yml  pypi-publish.yml
docs/: index.md
docs/about/: authors.md  changelog.md  contributing.md  development.md  index.md  license.md  publications.md
docs/concepts/: consistency-checking.md  index.md  kg-generation.md  ontology-extraction.md  owl-constraints.md  schema-generation.md
docs/getting-started/: fundamentals.md  index.md  installation.md  quickstart.md
docs/reference/: api.md  cli.md  index.md
docs/reference/files/: class-info.md  config.md  index.md  kg-info.md  namespaces-info.md  relation-info.md
evaluation/: README.md
src/pygraft/: __init__.py  cli.py  paths.py  pygraft.py  types.py
src/pygraft/generators/: classes.py  kg.py  relations.py  schema.py
src/pygraft/ontology_extraction/: relations.py
src/pygraft/resources/queries/ontology/relations/: inverseof_relations.rq  rel2disjoints.rq  rel2disjoints_extended.rq  rel2dom_rel2range.rq  rel2patterns.rq  relations.rq  subrelations.rq
src/pygraft/resources/templates/: pygraft.config.json  pygraft.config.yml  pygraft_config.json  pygraft_config.yml
src/pygraft/utils/: cli.py  config.py  kg.py  reasoning.py  schema.py  templates.py
